# saga

./: .gitignore  constants.py  dag.py  get_extra_data.py  get_products.py  main.py  pyproject.toml  pyrightconfig.json
db/: engine.py  models.py  session.py
notebooks/: analysis.py
src/core/: datalake_path.py  logging.py  schemas.py  settings.py
src/notebooks/: analysis.py  analysis2.py
src/scraper/core/: logging.py  settings.py
src/scraper/database/: engine.py  session.py
src/scraper/scrapers/sagafalabella/: __init__.py  client.py  constants.py  parser.py  repository.py  schemas.py  scrape.py  scraper.py
src/scraper/scrapers/sagafalabella/jobs/: get_extra_details_product.py  save_to_sql.py  scraper.py
src/scraper/utils/: text.py
src/services/: datalake.py  postgres.py
tests/integration/scraper/scrapers/sagafalabella/: test_client_integration.py
tests/integration/services/: test_datalake_integration.py  test_postgres_integration.py
tests/unit/scraper/scrapers/sagafalabella/: test_client.py  test_parser.py
tests/unit/scraper/utils/: test_text.py
tests/unit/services/: test_postgres.py
utils/: text.py
