[project]
name = "saga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "pendulum>=3.1.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
scrape-full-saga = "scraper.scrapers.sagafalabella.scrape:main"
