[project]
name = "saga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "pendulum>=3.1.0",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "marimo>=0.18.4",
    "pandas-stubs>=2.3.3.251219",
    "pyarrow-stubs>=20.0.0.20251215",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
scrape-full-saga = "scraper.scrapers.sagafalabella.jobs.scraper:main"
update-saga-product = "scraper.scrapers.sagafalabella.jobs.get_extra_details_product:main"
save-saga-product = "scraper.scrapers.sagafalabella.jobs.save_to_sql:main"
